# MomentumStrategy

./: README.md  pyproject.toml
.data/: S&P_5yr.csv
momentumstrategy/: __init__.py  momentumstrategy.py
output/: summary_ic100000_tc0.003_rf0.xlsx
