[tool.poetry]
name = "MomentumStrategy"
version = "0.1.0"
description = "<DESCRIPTION>"
authors = [
    "Kelvin Brinham <kelvinbrinham@gmail.com>",
]
readme = "README.md"

[[tool.poetry.source]]
name = "kelvinbrinham"
url = "https://github.com/kelvinbrinham/MomentumStrategy.git"
default = false
secondary = true

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
strategybacktest = { git = "https://github.com/kelvinbrinham/StrategyBacktest.git", branch = "release-0.9.0" }
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
safe = true

[tool.isort]
profile = "black"
line_length = 80
skip_gitignore = true
